--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "deploy": "pm2 deploy ecosystem.json production"
   },
   "dependencies": {
+    "@formily/core": "^2.0.0-beta.85",
+    "@formily/element": "^2.0.0-beta.85",
+    "@formily/reactive-vue": "^2.0.0-beta.85",
+    "@formily/vue": "^2.0.0-beta.85",
+    "@vue/composition-api": "^1.1.3",
     "axios": "^0.18.0",
     "element-ui": "^2.15.5",
     "vue": "^2.6.10",
@@ -30,6 +35,7 @@
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
     "babel-plugin-component": "^1.1.1",
+    "babel-plugin-import": "^1.13.3",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
@@ -62,6 +68,7 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass-loader": "^12.1.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "stylus": "^0.54.5",
